Fix small jumps in free transform when the object is mirrored

When the scale crosses the zero value, the algorithm could behave
in a less stable way. To overcome this issue, for the reference value
we shouldn't use any distance term. Instead we should calculate the
expected position for the moved point and pass it to the algorithm
explicitly.

BUG:426949