plugins/tools/tool_transform2/kis_free_transform_strategy_gsl_helpers.cpp
@@ -22,11 +22,14 @@
 #include "kis_transform_utils.h"
 
 #include <QMessageBox>
+#include <kis_algebra_2d.h>
 
 #include <config-gsl.h>
 
 #ifdef HAVE_GSL
 #include <gsl/gsl_multimin.h>
+
+
 
 namespace GSL
 {
@@ -54,9 +57,8 @@ namespace GSL
     struct Params1D {
         QPointF staticPointSrc;
         QPointF staticPointDst;
-
         QPointF movingPointSrc;
-        qreal viewDistance;
+        QPointF movingPointDst;
 
         const ToolTransformArgs *srcArgs;
     };
@@ -82,11 +84,8 @@ namespace GSL
         QPointF transformedMovingPoint = t.map(params->movingPointSrc);
 
         qreal result =
-            qAbs(kisDistance(transformedStaticPoint, transformedMovingPoint)
-                 - params->viewDistance) +
-            qAbs(transformedStaticPoint.x() - params->staticPointDst.x()) +
-            qAbs(transformedStaticPoint.y() - params->staticPointDst.y());
-
+            qAbs((transformedMovingPoint - params->movingPointDst).manhattanLength()) +
+            qAbs((transformedStaticPoint - params->staticPointDst).manhattanLength());
 
         return result;
     }
@@ -96,7 +95,7 @@ namespace GSL
                                        const QPointF &staticPointSrc,
                                        const QPointF &staticPointDst,
                                        const QPointF &movingPointSrc,
-                                       qreal viewDistance)
+                                       const QPointF &movingPointDst)
     {
         const gsl_multimin_fminimizer_type *T =
             gsl_multimin_fminimizer_nmsimplex2;
@@ -114,18 +113,29 @@ namespace GSL
         gsl_vector_set (x, 1, args.transformedCenter().x());
         gsl_vector_set (x, 2, args.transformedCenter().y());
 
+        KisTransformUtils::MatricesPack m(args);
+        QTransform t = m.finalTransform();
+
+        /**
+         * Approximate initial offset step by 10% of the moving point
+         * offset. It means that the destination point will be reached
+         * in at most 10 steps.
+         */
+        const QPointF transformedMovingPoint = t.map(movingPointSrc);
+        const qreal initialStep = 0.1 * kisDistance(transformedMovingPoint, movingPointDst);
+
         /* Set initial step sizes to 0.1 */
         ss = gsl_vector_alloc (3);
         gsl_vector_set (ss, 0, 0.1);
-        gsl_vector_set (ss, 1, 10);
-        gsl_vector_set (ss, 2, 10);
+        gsl_vector_set (ss, 1, initialStep);
+        gsl_vector_set (ss, 2, initialStep);
 
         Params1D p;
 
         p.staticPointSrc = staticPointSrc;
         p.staticPointDst = staticPointDst;
         p.movingPointSrc = movingPointSrc;
-        p.viewDistance = viewDistance;
+        p.movingPointDst = movingPointDst;
         p.srcArgs = &args;
 
         /* Initialize method and iterate */
@@ -313,26 +323,26 @@ namespace GSL
                                   const QPointF &staticPointSrc,
                                   const QPointF &staticPointDst,
                                   const QPointF &movingPointSrc,
-                                  qreal viewDistance)
+                                  const QPointF &movingPointDst)
     {
         return calculateScale1D<XScaleStrategy>(args,
                                                 staticPointSrc,
                                                 staticPointDst,
                                                 movingPointSrc,
-                                                viewDistance);
+                                                movingPointDst);
     }
 
     ScaleResult1D calculateScaleY(const ToolTransformArgs &args,
                                   const QPointF &staticPointSrc,
                                   const QPointF &staticPointDst,
                                   const QPointF &movingPointSrc,
-                                  qreal viewDistance)
+                                  const QPointF &movingPointDst)
     {
         return calculateScale1D<YScaleStrategy>(args,
                                                 staticPointSrc,
                                                 staticPointDst,
                                                 movingPointSrc,
-                                                viewDistance);
+                                                movingPointDst);
     }
 
 }
@@ -372,7 +382,7 @@ namespace GSL
                                   const QPointF &staticPointSrc,
                                   const QPointF &staticPointDst,
                                   const QPointF &movingPointSrc,
-                                  qreal viewDistance)
+                                  const QPointF &movingPointDst)
     {
         warnNoGSL();
 
@@ -386,7 +396,7 @@ namespace GSL
                                   const QPointF &staticPointSrc,
                                   const QPointF &staticPointDst,
                                   const QPointF &movingPointSrc,
-                                  qreal viewDistance)
+                                  const QPointF &movingPointDst)
     {
         warnNoGSL();
 
