plugins/tools/tool_transform2/kis_free_transform_strategy_gsl_helpers.h
@@ -37,13 +37,13 @@ namespace GSL
                                   const QPointF &staticPointSrc,
                                   const QPointF &staticPointDst,
                                   const QPointF &movingPointSrc,
-                                  qreal viewDistance);
+                                  const QPointF &movingPointDst);
 
     ScaleResult1D calculateScaleY(const ToolTransformArgs &args,
                                   const QPointF &staticPointSrc,
                                   const QPointF &staticPointDst,
                                   const QPointF &movingPointSrc,
-                                  qreal viewDistance);
+                                  const QPointF &movingPointDst);
 
     struct ScaleResult2D {
         ScaleResult2D() : scaleX(1.0), scaleY(1.0) {}
